--- a/floats.css
+++ b/floats.css
@@ -1,6 +1,3 @@
-/**
- * Float Layout Activity
- **/
 
 * {
   box-sizing: border-box;
@@ -9,8 +6,6 @@
 
 body {
   font-size: 24px;
-  line-height: 32px;
-  color: #333;
 }
 
 header {
@@ -23,26 +18,24 @@ header {
 section {
   padding: 20px;
   margin-bottom: 20px;
-  background: #ccc;;
+  background: #ccc;
+  color: white;
 }
 
 #left {
   background: #666;
   float: left;
-  color:#fff;
   width: 33.3%;
 }
 
 #middle {
   background: #888;
-  color: #fff;
   float: left;
   width: 33.3%;
 }
 
 #right {
   background: #666;
-  color: #fff;
   float: left;
   width: 33.3%;
 }
@@ -50,8 +43,8 @@ section {
 #full {
   background: #eee;
   width: 100%;
-  overflow: auto;
   clear: both;
+  overflow: auto;
 }
 
 #division {
